# KIS3_v2r2

./: .gitignore  Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf  команды на сервере .txt
backend/: Dockerfile  config.py  copy_data_from_KIS2_to_KIS3.py  database.py  main.py  models.py  pyproject.toml  test_views.py  админ панель.txt
backend/KIS2/: DjangoRestAPI.py  db_test.sqlite3  work_with_DB.py
backend/auth/: jwt_auth.py  user_CRUD.py  utils.py
backend/content/: HTML_example.html
backend/kis2/: DjangoRestAPI.py  work_with_DB.py
backend/migrations/: env.py
backend/migrations/versions/: 255a25b48285_add_task_taskpaymentstatus_taskstatus.py  2e11c31de0bd_add_timings.py  331729a5069a_add_change_task.py  492b1f623798_add_equipment.py  53040178f872_fix_task_name_unique.py  62eeb4ad8d75_fix_order_works_relationship.py  68ee961e8ddd_add_timings.py  694365c01474_fix_task.py  6f2e70d97840_edit_task.py  74d622f79dd2_fix_name_for_equipment.py  7cdeb8dc787f_добавлено_поле_uuid_в_person_nullable_.py  86bcd74479fd_init_db.py  941bc62905e9_fix_relationship.py  9a44535aef98_rename.py  ba4a6b77ddbc_поправил_учёт_шкафооов.py  c224ba1efb45_add_status_id_taskpaymentstatus_id.py  c5aa2a28d350_добавлено_поле_uuid_в_person.py  cc0d65a95f5a_add_order_comment.py  d2a5a482e9d5_edit_task_and_order.py  dd4443b0e776_добавил_учёт_шкафов.py  (+4 more)
backend/models/: models.py
backend/routers/: box_accountig_router.py  comments_router.py  counterparty_router.py  get_all_router.py  import_data.py  import_router.py  order_router.py  people_router.py  test_views.py
backend/schemas/: __init__.py  box_accounting_schem.py  order_schem.py  task_schem.py  work_schem.py
backend/utils/: copy_data_from_KIS2_to_KIS3.py  import_data.py
beckend/: pyproject.toml
(+71 files in other folders)
