[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["voronovmaksim88 <voronovmaksim88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.2"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
colorama = "^0.4.6"
requests = "^2.32.3"
starlette = "^0.46.1"
loguru = "^0.7.3"
pyjwt = "^2.10.1"
pydantic-settings = "^2.8.1"
bcrypt = "^4.3.0"
email-validator = "^2.2.0"
cryptography = "^44.0.2"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
